--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/react-click-outside": "^3.0.3"
     }
 }
