--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
         "classnames": "^2.3.2",
         "clsx": "^1.2.1",
         "firebase": "^9.22.1",
+        "gapi-script": "^1.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-google-login": "^5.2.2",
         "react-responsive": "^9.0.2",
         "react-router-dom": "^6.11.2",
         "react-scripts": "5.0.1",
