--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
+        "@types/firebase": "^3.2.1",
         "@types/jest": "^27.5.2",
         "@types/node": "^16.18.33",
         "@types/react": "^18.2.7",
@@ -18,10 +19,13 @@
         "gapi-script": "^1.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-firebase-file-uploader": "^2.4.4",
         "react-google-login": "^5.2.2",
+        "react-redux": "^8.0.7",
         "react-responsive": "^9.0.2",
         "react-router-dom": "^6.11.2",
         "react-scripts": "5.0.1",
+        "redux": "^4.2.1",
         "sass": "^1.62.1",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
