--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "axios": "^1.4.0",
         "classnames": "^2.3.2",
         "clsx": "^1.2.1",
+        "debounce": "^1.2.1",
         "firebase": "^9.22.1",
         "gapi-script": "^1.2.0",
         "react": "^18.2.0",
@@ -55,6 +56,7 @@
         ]
     },
     "devDependencies": {
+        "@types/debounce": "^1.2.1",
         "@types/react-click-outside": "^3.0.3"
     }
 }
