--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "debounce": "^1.2.1",
         "firebase": "^9.22.1",
         "gapi-script": "^1.2.0",
+        "query-string": "^8.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-firebase-file-uploader": "^2.4.4",
